add new fuctional interfaces and stream api